force-app/main/default/objects/IntegrationMapping__c/IntegrationMapping__c.object-meta.xml
<CustomObject>
    <description>Field mapping used by an ErpSync integration flow.</description>
    <label>Integration Mapping</label>
    <nameField>
        <label>Integration Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>