force-app/main/default/objects/IntegrationMapping__c/fields/DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>DefaultValue__c</fullName>
    <label>Default Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>