force-app/main/default/objects/IntegrationMapping__c/fields/ExternalField__c.field-meta.xml
<CustomField>
    <fullName>ExternalField__c</fullName>
    <label>External Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>