force-app/main/default/objects/IntegrationMapping__c/fields/IntegrationFlow__c.field-meta.xml
<CustomField>
    <fullName>IntegrationFlow__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Integration Flow</label>
    <referenceTo>IntegrationFlow__c</referenceTo>
    <relationshipLabel>Integration Mappings</relationshipLabel>
    <relationshipName>IntegrationMappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>