force-app/main/default/objects/IntegrationMapping__c/fields/IsExternalKey__c.field-meta.xml
<CustomField>
    <fullName>IsExternalKey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Key</label>
    <type>Checkbox</type>
</CustomField>