force-app/main/default/objects/IntegrationMapping__c/fields/NullBehavior__c.field-meta.xml
<CustomField>
    <fullName>NullBehavior__c</fullName>
    <label>Null Behavior</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ignore</fullName>
                <default>true</default>
                <label>Ignore</label>
            </value>
            <value>
                <fullName>Clear Target</fullName>
            </value>
            <value>
                <fullName>Use Default</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>