force-app/main/default/objects/IntegrationMapping__c/fields/TransformType__c.field-meta.xml
<CustomField>
    <fullName>TransformType__c</fullName>
    <label>Transform Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Trim</fullName>
            </value>
            <value>
                <fullName>Uppercase</fullName>
            </value>
            <value>
                <fullName>Lowercase</fullName>
            </value>
            <value>
                <fullName>Date Format</fullName>
            </value>
            <value>
                <fullName>Boolean Mapping</fullName>
            </value>
            <value>
                <fullName>Picklist Mapping</fullName>
            </value>
            <value>
                <fullName>Custom Apex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>