force-app/main/default/objects/IntegrationMapping__c/fields/ValidationMessage__c.field-meta.xml
<CustomField>
    <fullName>ValidationMessage__c</fullName>
    <label>Validation Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>